welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: value unary_! is not a member of Int
while (!2*Biscuit=Case+1!) {
       ^